--- a/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
+++ b/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
@@ -283,21 +283,23 @@
 		blsp0_uart_rx_tx {
 			pins = "gpio20", "gpio21";
 			function = "blsp0_uart0";
-			bias-disable;
+			drive-strength = <8>;
+			bias-pull-up;
 		};
 	};
 	blsp1_uart_pins: blsp1_uart_pins {
 		blsp1_uart_rx_tx {
 			pins = "gpio23", "gpio25", "gpio24", "gpio26";
 			function = "blsp1_uart2";
-			bias-disable;
+			drive-strength = <8>;
+			bias-pull-up;
 		};
 	};
 	blsp0_spi_pins: blsp0_spi_pins {
 		mux {
 			pins = "gpio10", "gpio11", "gpio12", "gpio13";
 			function = "blsp0_spi";
-			drive-strength = <2>;
+			drive-strength = <8>;
 			bias-disable;
 		};
 	};
@@ -312,7 +314,7 @@
 				pins = "gpio8";
 				function = "qspi_cs";
 				drive-strength = <8>;
-				bias-disable;
+				bias-pull-up;
 			};
 		qspi_data_0 {
 				pins = "gpio7";
