--- a/profiles/noname_sw8-lite.yml
+++ b/profiles/noname_sw8-lite.yml
@@ -1,9 +1,9 @@
 ---
-profile: noname_sw8-clone
+profile: noname_sw8-line
 target: ipq50xx
 subtarget: generic
-description: Build image for the noname sw8-clone AP
-image: bin/targets/ipq50xx/generic/openwrt-ipq50xx-noname_sw8-clone-squashfs-sysupgrade.tar
+description: Build image for the noname sw8-line AP
+image: bin/targets/ipq50xx/generic/openwrt-ipq50xx-noname_sw8-lite-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
     path: ../../feeds/ipq807x_v5.4
