--- a/profiles/fplus_wf-ap-624m-iic-v2.yml
+++ b/profiles/fplus_wf-ap-624m-iic-v2.yml
@@ -1,8 +1,8 @@
-profile: fplus_wf-ap-624m-iic
+profile: fplus_wf-ap-624m-iic-v2
 target: ipq807x
 subtarget: ipq50xx
 description: Build image for the ikuai sw8 fplus wf-ap-624m-iic
-image: bin/targets/ipq807x/ipq50xx/openwrt-ipq5018-fplus_wf-ap-624m-iic-squashfs-sysupgrade.tar
+image: bin/targets/ipq807x/ipq50xx/openwrt-ipq5018-fplus_wf-ap-624m-iic-v2-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
     path: ../../feeds/ipq807x
