--- a/feeds/ipq807x_v5.4/hostapd/Config.in
+++ b/feeds/ipq807x_v5.4/hostapd/Config.in
@@ -49,6 +49,27 @@ config WPA_MSG_MIN_PRIORITY
 		4 = warnings
 		5 = errors
 
+config WPA_DEBUG_FILE
+	bool "Add support for writing debug log to a file. CONFIG_DEBUG_FILE=y"
+	depends on PACKAGE_wpa-supplicant || \
+		   PACKAGE_wpa-supplicant-openssl || \
+		   PACKAGE_wpa-supplicant-wolfssl || \
+		   PACKAGE_wpa-supplicant-mesh-openssl || \
+		   PACKAGE_wpa-supplicant-mesh-wolfssl || \
+		   PACKAGE_wpa-supplicant-basic || \
+		   PACKAGE_wpa-supplicant-mini || \
+		   PACKAGE_wpa-supplicant-p2p || \
+		   PACKAGE_wpad || \
+		   PACKAGE_wpad-openssl || \
+		   PACKAGE_wpad-wolfssl || \
+		   PACKAGE_wpad-basic || \
+		   PACKAGE_wpad-basic-openssl || \
+		   PACKAGE_wpad-basic-wolfssl || \
+		   PACKAGE_wpad-mini || \
+		   PACKAGE_wpad-mesh-openssl || \
+		   PACKAGE_wpad-mesh-wolfssl
+	default y
+
 config WPA_WOLFSSL
 	bool
 	default PACKAGE_wpa-supplicant-wolfssl ||\
