--- a/profiles/yuncore_fap655.yml
+++ b/profiles/yuncore_fap655.yml
@@ -5,6 +5,10 @@ subtarget: generic
 description: Build image for Yuncore FAP655
 image: bin/targets/ipq50xx/generic/openwrt-ipq50xx-yuncore_fap655-squashfs-sysupgrade.tar
 feeds:
+  - name: qow 
+    path: /sdk1/qos-sensor_fap650-master/openwrt/openwrt
+  - name: wda
+    path: /sdk1/wda_stable/openwrt
   - name: ipq807x
     path: ../../feeds/ipq807x_v5.4
 include:
