ipq5018: add support ikuai,sw8v3 fplus,wf-ap-624m-iic-v3
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/wifi-ax/ath11k-wifi/Makefile
+++ b/feeds/wifi-ax/ath11k-wifi/Makefile
@@ -148,6 +148,16 @@ $(call Package/ath11k-wifi-default)
     TITLE:=fplus wf-ap-624m-iic-v2 bdf
 endef
 
+define Package/ath11k-wifi-ikuai-sw8v3
+$(call Package/ath11k-wifi-default)
+    TITLE:=ikuai sw8v3 bdf
+endef
+
+define Package/ath11k-wifi-fplus-wf-ap-624m-iic-v3
+$(call Package/ath11k-wifi-default)
+    TITLE:=fplus wf-ap-624m-iic-v3 bdf
+endef
+
 define Package/ath11k-wifi-fplus-wf-ap-624m-iic
 $(call Package/ath11k-wifi-default)
     TITLE:=fplus wf-ap-624m-iic bdf
@@ -325,6 +335,13 @@ define Package/ath11k-wifi-ikuai-sw8v2/install
 	$(INSTALL_DATA) ./board-ikuai-sw8.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
 endef
 
+define Package/ath11k-wifi-ikuai-sw8v3/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
+	$(INSTALL_DATA) ./board-ikuai-sw8.bin.IPQ5018 $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/board.bin
+	$(INSTALL_DATA) ./board-ikuai-sw8.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
+endef
+
 define Package/ath11k-wifi-fplus-wf-ap-624m-iic/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
@@ -337,6 +354,13 @@ define Package/ath11k-wifi-fplus-wf-ap-624m-iic-v2/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
 	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic-v2.bin.IPQ5018 $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/board.bin
 	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic-v2.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
+endef
+
+define Package/ath11k-wifi-fplus-wf-ap-624m-iic-v3/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
+	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic-v3.bin.IPQ5018 $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/board.bin
+	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic-v3.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
 endef
 
 define Package/ath11k-wifi-optimcloud-d60/install
@@ -463,8 +487,10 @@ $(eval $(call BuildPackage,ath11k-wifi-motorola-q14))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d50))
 $(eval $(call BuildPackage,ath11k-wifi-ikuai-sw8))
 $(eval $(call BuildPackage,ath11k-wifi-ikuai-sw8v2))
+$(eval $(call BuildPackage,ath11k-wifi-ikuai-sw8v3))
 $(eval $(call BuildPackage,ath11k-wifi-fplus-wf-ap-624m-iic))
 $(eval $(call BuildPackage,ath11k-wifi-fplus-wf-ap-624m-iic-v2))
+$(eval $(call BuildPackage,ath11k-wifi-fplus-wf-ap-624m-iic-v3))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d60))
 $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4xi))
 $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4xi_wp))
